@@ -259,8 +259,8 @@ function vboxGetVRDEAddress(vm) {
             case "NetBSD_64":       strIcon = "os_netbsd_64.png"; break;
             case "Solaris":         strIcon = "os_solaris.png"; break;
             case "Solaris_64":      strIcon = "os_solaris_64.png"; break;
-            case "OpenSolaris":     strIcon = "os_opensolaris.png"; break;
-            case "OpenSolaris_64":  strIcon = "os_opensolaris_64.png"; break;
+            case "OpenSolaris":     strIcon = "os_oraclesolaris.png"; break;
+            case "OpenSolaris_64":  strIcon = "os_oraclesolaris_64.png"; break;
             case "QNX":             strIcon = "os_qnx.png"; break;
             case 'MacOS':			strIcon = "os_macosx.png"; break;
             case 'MacOS_64':			strIcon = "os_macosx_64.png"; break;
